<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/happyBirthdayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/happy_birthday"
            android:textColor="#FF5722"
            android:textSize="48sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!--        CakeView is a custom SurfaceView that is defined in the app's source code -->
        <cs301.birthdaycake.CakeView
            android:id="@+id/cakeview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:gravity="right"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/candlesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview" />

            <SeekBar
                android:id="@+id/candleSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="5"
                android:progress="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical">

            <Switch
                android:id="@+id/candleSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minHeight="32dp"
                android:text="@string/candles" />

            <Switch
                android:id="@+id/frostingSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minHeight="48sp"
                android:text="@string/frosting" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:gravity="right"
            android:orientation="vertical">

            <Button
                android:id="@+id/blowOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5sp"
                android:includeFontPadding="true"
                android:padding="5sp"
                android:paddingLeft="5sp"
                android:paddingTop="5sp"
                android:paddingRight="5sp"
                android:text="Extinguish" />

            <Button
                android:id="@+id/byeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goodbye"
                android:padding="5sp"
                android:text="@string/goodbye" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>